Added game modes section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,34 @@
         </div>
     </div>
 
+<!-- Game Modes Section -->
+<div class="game-modes">
+    <h2>3 Punchable Game Modes!</h2>
+    <div class="game-mode-container">
+        <div class="game-mode">
+            <img src="Images/GameScreenshots/StartButton.png" alt="Classic Mode">
+            <div class="game-mode-overlay">
+                <h3>Classic Mode</h3>
+                <p>Punch bombs away before they explode, rack up massive combos, dodge dangerous obstacles, and hit targets!</p>
+            </div>
+        </div>
+        <div class="game-mode">
+            <img src="Images/GameScreenshots/Bomb.png" alt="Blitz Mode">
+            <div class="game-mode-overlay">
+                <h3>Blitz Mode</h3>
+                <p>Bombs no longer explode. This mode goes from 0 to 100 INSTANTLY - get as high of a score as you can in the allotted time!</p>
+            </div>
+        </div>
+        <div class="game-mode">
+            <img src="Images/GameScreenshots/PunchTarget.png" alt="Challenge Mode">
+            <div class="game-mode-overlay">
+                <h3>Challenge Mode</h3>
+                <p>A fun collection of challenges to put your speed and accuracy to the test!</p>
+            </div>
+        </div>
+    </div>
+</div>
+
     <!-- Social Media Section -->
     <div class="social-media">
         <a href="https://www.youtube.com/@cfmakesthings"><img src="Images/SocialIcons/yt_icon_mono_dark.png" alt="Twitter"></a>
