Updated design to make spacing better

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="https://use.typekit.net/dcz4xah.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VR Game Landing Page</title>
+    <title>Punch Bomb VR</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
@@ -12,7 +12,7 @@
     <!-- Banner Section -->
 <div class="banner">
         <img src="Images\Logo_Trimmed.png" alt="Game Logo" class="logo">
-        <button class="coming-soon-btn">COMING SOON</button>
+        <button class="coming-soon-btn">PUNCH THINGS SOON</button>
 </div>
 
 <!--<a href="#" class="store-button">Meta Quest Store</a>-->
@@ -35,7 +35,7 @@
             <img src="Images/GameScreenshots/Bomb.png" alt="Blitz Mode">
             <div class="game-mode-overlay">
                 <h3>Blitz Mode</h3>
-                <p>Bombs no longer explode. This mode goes from 0 to 100 INSTANTLY - get as high of a score as you can in the allotted time!</p>
+                <p>Go from 0 to 100 INSTANTLY - Bombs no longer explode. Rack up a high score in the allotted time!</p>
             </div>
         </div>
         <div class="game-mode">
