Pages linked and social icons added

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="https://use.typekit.net/dcz4xah.css">
+    <link rel="stylesheet" href="https://use.typekit.net/dcz4xah.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Punch Bomb VR</title>
@@ -9,10 +9,33 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
+    <!-- Navigation Menu -->
+    <!-- <nav class="nav-menu">
+        <div class="nav-logo">
+            <a href="#">Punch Bomb VR</a>
+        </div>
+        <ul class="nav-links">
+            <li><a href="https://www.youtube.com/@cfmakesthings">YouTube</a></li>
+            <li><a href="https://www.instagram.com/cfmakesthings">Instagram</a></li>
+            <li><a href="#">Discord</a></li>
+            <li><a href="#">Terms of Service</a></li>
+        </ul>
+        <div class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </nav> -->
+
     <!-- Banner Section -->
 <div class="banner">
+        <div class="social-icons">
+            <a href="https://www.youtube.com/@cfmakesthings"><img src="Images/SocialIcons/yt_icon_mono_dark.png" alt="YouTube"></a>
+            <a href="https://www.instagram.com/cfmakesthings"><img src="Images/SocialIcons/Instagram_Glyph_White.png" alt="Instagram"></a>
+        </div>
         <img src="Images\Logo_Trimmed.png" alt="Game Logo" class="logo">
         <button class="coming-soon-btn">PUNCH THINGS SOON</button>
+        <a href="punchbombTOS.html" class="terms-link">Privacy Policy/Terms of Service</a>
 </div>
 
 <!--<a href="#" class="store-button">Meta Quest Store</a>-->
@@ -55,4 +78,12 @@
 </div>
 <script src="script.js"></script>
 </body>
+<!-- <script>
+    const navToggle = document.querySelector('.nav-toggle');
+    const navLinks = document.querySelector('.nav-links');
+
+    navToggle.addEventListener('click', () => {
+        navLinks.style.display = navLinks.style.display === 'block' ? 'none' : 'block';
+    });
+</script> -->
 </html>
