--- a/punchbombTOS.html
+++ b/punchbombTOS.html
@@ -4,10 +4,12 @@
     <title>Terms of Service</title>
     <link rel="stylesheet" href="stylesTOS.css">
     <link rel="stylesheet" href="https://use.typekit.net/dcz4xah.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="container">
         <div class="logo-banner">
+            <a href="index.html" class="back-home">Home</a>
             <img src="Images/Logo_Trimmed.png" alt="Punch Bomb Logo" class="logo">
         </div>
         <h1>Privacy Policy</h1>
