Added PUNCH THINGS section

--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
         </div>
     </div>
 
+<!-- New Section: Punch Things -->
+<div class="punch-things">
+    <div class="punch-things-container">
+        <div class="punch-things-screenshot">
+            <video autoplay muted loop>
+                <source src="images/GameplayFootageSmall.mp4" type="video/mp4">
+            </video>
+            <!-- <img src="Images/GameScreenshots/LaserProbe.png" alt="Game Screenshot"> -->
+        </div>
+        <div class="punch-things-description">
+            <h2>PUNCH THINGS!</h2>
+            <p>Punch Bomb is an action arcade VR game where you punch things designed from the ground up for those who like a challenge!</p>
+            <p>This game <b>IS NOT EASY</b></p>
+            <p>Rack up huge combos, hit targets, and survive in <b>Classic Mode</b>,</p>
+            <p>test your skills in the allotted time in <b>Blitz Mode</b>,</p>
+            <p>or try to conquer a collection of challenges that put your speed and accuracy to the test in <b>Challenge Mode</b>!</p>
+        </div>
+    </div>
+</div>
+
 <!-- Game Modes Section -->
 <div class="game-modes">
     <h2>3 Punchable Game Modes!</h2>
