--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 <div class="punch-things">
     <div class="punch-things-container">
         <div class="punch-things-screenshot">
-            <video autoplay muted loop>
-                <source src="images/GameplayFootageSmall.mp4" type="video/mp4">
-            </video>
+            <video src="images/GameplayFootageSmall.mp4" autoplay muted loop></video>
             <!-- <img src="Images/GameScreenshots/LaserProbe.png" alt="Game Screenshot"> -->
         </div>
         <div class="punch-things-description">
@@ -88,6 +86,19 @@
                 <p>A fun collection of challenges to put your speed and accuracy to the test!</p>
             </div>
         </div>
+    </div>
+</div>
+
+<div class="collect-things">
+    <div class="collect-things-container">
+        <div class="collect-things-description">
+            <h2>Collect Things!</h2>
+            <p>Complete challenging milestones to unlock <b>unique cosmetic fists</b> - each with their own particle effects!</p>
+        </div>
+        <div class="collect-things-fist">
+            <img src="Images/fists/MidasFists.png" alt="Gold fist">
+        </div>
+
     </div>
 </div>
 
