--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <p>Complete challenging milestones to unlock <b>unique cosmetic fists</b> - each with their own particle effects!</p>
         </div>
         <div class="collect-things-fist">
-            <img src="Images/fists/MidasFists.png" alt="Gold fist">
+            <img src="Images/Fists/MidasFists.png" alt="Gold fist">
         </div>
 
     </div>
