Updated some of the index. Got looping video working.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             </div>
         </div>
         <div class="game-mode">
-            <img src="Images/GameScreenshots/ChallengeMode.png" alt="Challenge Mode">
+            <img src="Images/GameScreenshots/ChallengeMode2.png" alt="Challenge Mode">
             <div class="game-mode-overlay">
                 <h3>Challenge Mode</h3>
                 <p>A fun collection of challenges to put your speed and accuracy to the test!</p>
@@ -91,6 +91,9 @@
 
 <div class="collect-things">
     <div class="collect-things-container">
+        <!-- <div class="collect-things-fist">
+            <img src="Images/Fists/MonsterFist.png">
+        </div> -->
         <div class="collect-things-description">
             <h2>Collect Things!</h2>
             <p>Complete challenging milestones to unlock <b>unique cosmetic fists</b> - each with their own particle effects!</p>
