Added a leaderboard section to promote that the game has global leaderboards.

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </div>
 </div>
-
+<div class="endcontent">
 <div class="collect-things">
     <div class="collect-things-container">
         <!-- <div class="collect-things-fist">
@@ -105,10 +105,24 @@
     </div>
 </div>
 
+<!-- Leaderboard Section -->
+<div class="leaderboard">
+    <div class="leaderboard-container">
+        <div class="leaderboard-image">
+            <!-- <img src="Images/Leaderboard.png" alt="Leaderboard"> -->
+        </div>
+        <div class="leaderboard-description">
+            <h2>Make Your Mark!</h2>
+            <p>Compete in global leaderboards to prove you're the best!</p>
+        </div>
+    </div>
+</div>
+</div>
+
     <!-- Social Media Section -->
-    <div class="social-media">
-        <a href="https://www.youtube.com/@cfmakesthings"><img src="Images/SocialIcons/yt_icon_mono_dark.png" alt="Twitter"></a>
-        <a href="https://www.instagram.com/cfmakesthings"><img src="Images/SocialIcons/Instagram_Glyph_White.png" alt="Instagram"></a>
+<div class="social-media">
+    <a href="https://www.youtube.com/@cfmakesthings"><img src="Images/SocialIcons/yt_icon_mono_dark.png" alt="Twitter"></a>
+    <a href="https://www.instagram.com/cfmakesthings"><img src="Images/SocialIcons/Instagram_Glyph_White.png" alt="Instagram"></a>
 </div>
 <script src="script.js"></script>
 </body>
