--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="punch-things-description">
             <h2>PUNCH THINGS!</h2>
-            <p>Punch Bomb is an action arcade VR game where you punch things designed from the ground up for those who like a challenge!</p>
+            <p>Punch Bomb is an intense action arcade VR game where you punch things designed from the ground up for those who like a challenge!</p>
             <p>This game <b>IS NOT EASY</b></p>
             <p>Rack up huge combos, hit targets, and survive in <b>Classic Mode</b>,</p>
             <p>test your skills in the allotted time in <b>Blitz Mode</b>,</p>
