--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
         <div class="leaderboard-description">
             <h2>Make Your Mark!</h2>
-            <p>Compete in global leaderboards to prove you're the best!</p>
+            <p>Compete in global leaderboards to stomp the competition and prove you're the best!</p>
         </div>
     </div>
 </div>
